syntax = "proto3";

option csharp_namespace = "PrdGrpcService.Protos";

message Exception {
    optional string StackTrace = 1;
    optional string Source = 2;
    string Message = 3;
    int32 HResult = 4;
}