syntax = "proto3";

import "Protos/google/api/annotations.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/exception.proto";

option csharp_namespace = "SzGrpcService";

package size;

service SizeTypeOpr {
	rpc CreateSizeType (CreateSizeTypeRequest) returns (CreateSizeTypeResponse) {
		option (google.api.http) = {
            post: "/SizeType/CreateSizeType"
            body: "*"
		};
	};

    rpc GetActiveSizeTypes(google.protobuf.Empty) returns (GetActiveSizeTypesResponse) {
        option (google.api.http) = {
            post: "/SizeType/GetActiveSizeTypes"
            body: "*"
        };
    };
}

message CreateSizeTypeRequest {
	string Name = 1;
}

message CreateSizeTypeResponse {
    optional SizeType Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}
message GetActiveSizeTypesResponse {
    repeated SizeType Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}

message SizeType {
    string Guid = 1;
    string Name = 2;
    bool Status = 3;
    bool IsDeleted = 4;
}